welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:3: error: not found: type int
    var X:int=getWorldHeight()
          ^