welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  def remplir(){
    var X:int=getWorldHeight()
    var T = new Array[Color](X)
    for (i<-0 to X){
      T(i)=getCouleurSol()
      avance()
    }
    for (i<-0 to X){
      recule
    }
  }
  
  
}